configuration des fonts/couleurs + debut html et nav

--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -5,6 +5,7 @@ body{
   font-size: $fz-normal;
   color: $color-text-normal;
   line-height: $lh-normal;
+  background-color: $mauve-main;
 }
 
 a {
