--- a/src/scss/settings/_fonts.scss
+++ b/src/scss/settings/_fonts.scss
@@ -2,16 +2,17 @@
 
 /// Grosseur des textes
 
-$fz-normal: rem(18);
-$fz-normal2: rem(20);
-$fz-footer: rem(20);
-$fz-nav: rem(16);
+$fz-normal: rem(16);
+$fz-normal2: rem(18);
+$fz-normal3: rem(24);
+$fz-footer: rem(12);
+$fz-nav: rem(112);
 
 
 /// Grosseur des titres
 
-$fz-h1: rem(42);
-$fz-h2: rem(32);
+$fz-h1: rem(55);
+$fz-h2: rem(36);
 $fz-h3: rem(28);
 $fz-h4: rem(64);
 $fz-h5: rem(20);
@@ -28,9 +29,9 @@ $lh-extra-large: 2.4;
 
 /// Font family
 
-$ff-normal: 'Poppins', Helvetica, Arial, sans-serif;
-$ff-alternatif : 'Overpass', Helvetica, Arial, sans-serif;
-$ff-title: 'Holtwood One SC', Times New Roman, Arial, serif;
+$ff-normal: 'DM Sans', Helvetica, Arial, sans-serif;
+$ff-alternatif : 'Papyrus', Helvetica, Arial, sans-serif;
+$ff-title: 'Epilogue', Times New Roman, Arial, serif;
 
 /// Fonts weight
 $fw-thin: 100;
