fin html acceuil + debut css textes et boutons acceuil

--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -16,6 +16,10 @@ button{
 
 }
 
+.texte-alt-color{
+  color: $jaune-main;
+}
+
 @media screen and (max-width: $vw-tablette){
   body {
     width: 100%;
