--- a/src/scss/components/_section-hero.scss
+++ b/src/scss/components/_section-hero.scss
@@ -1,5 +1,10 @@
 // demo-reel
-
+video{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 
 
@@ -12,19 +17,29 @@
   left: 0;
   top: 437px;
 
+  background: rgba(131,92,237,0.45);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
 
 // texte-banderolle
-
+.hero h1{
+  margin: 35px 0 0 0;
+}
 .hero p{
   width: 193px;
   height: 50px;
 
+  margin-top: 0;
+
   line-height: 25px;
 
   font-size: $fz-normal3;
+
 }
 
 // bouton-banderolle
