--- a/src/scss/components/_header-page.scss
+++ b/src/scss/components/_header-page.scss
@@ -11,7 +11,9 @@
   overflow: hidden;
   transition: 0.5s;
   padding-top: 60px;
-  text-align:center;
+
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 .sidenav a {
   padding: 8px 8px 8px 32px;
@@ -24,11 +26,12 @@
   font-weight: $fw-bold;
   font-size: $fz-nav;
   line-height: 105.47%;
-
-  list-style-type: disc;
 }
 .sidenav a:hover{
   color: $mauve-pale;
+}
+.sidenav a:nth-child(2), a:nth-child(3), a:nth-child(4), a:nth-child(5){
+  margin-left: 190px;
 }
 .sidenav .closeMenu {
   position: absolute;
