--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -13,7 +13,13 @@ a {
 }
 
 button{
+  width: 200px;
+  height: 54px;
 
+  background-color: $jaune-main;
+  border-radius: 3px;
+  border: none;
+  color: $mauve-main;
 }
 
 .texte-alt-color{
