--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -1,3 +1,17 @@
+/* section-contact */
+.grid-contact{
+  display: grid;
+  grid-template-columns: 15% 35% 35% 15%;
+}
+.info-contact{
+  width: 450px;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+.info-contact > *{
+  margin: 80px 0 0 0;
+}
+
 /* titre-contact */
 .titre-contact{
   font-family: $ff-title;
@@ -7,5 +21,27 @@
   color: $color-text-normal;
 
   text-align: center;
-  margin-top: 70px;
+  line-height: 120%;
+}
+
+/* Icon-Contact */
+.sociaux{
+  width: 430px;
+  display: flex;
+  justify-content: flex-start;
+}
+.fab{
+  font-size: 4.688rem;
+  color: $jaune-main;
+  margin: 0 100px 0 0;
+}
+
+/* formulaire */
+
+.formulaire-contact{
+  display: flex;
+  flex-direction: column;
+}
+.formulaire-contact > label,textarea{
+  margin: 50px 0 0 0;
 }
