--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,7 @@
 @import "components/section-404";
 @import "components/section-page";
 @import "components/section-single";
+@import "components/section-singles";
 @import "components/section-images";
 
 
