--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,9 @@
 @import "components/section-single";
 @import "components/section-singles";
 @import "components/section-images";
+@import "components/section-a-propos";
+@import "components/section-competences";
+@import "components/section-interets";
 
 
 
