--- a/src/scss/components/_section-hero.scss
+++ b/src/scss/components/_section-hero.scss
@@ -1,18 +1,24 @@
+
+
+
 // demo-reel
-video{
+.video-demo-bg{
+  height: 100vh;
+  width: 100vw;
+}
+
+video source{
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
-
-
 // banderolle
 
 .banderolle{
   position: absolute;
-  width: 100%;
+  width: 100vw;
   height: 280px;
   left: 0;
   top: 437px;
