--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -6,10 +6,30 @@ body{
   color: $color-text-normal;
   line-height: $lh-normal;
   background-color: $mauve-main;
+
+  cursor: none;
 }
 
-a {
+.cursor{
+  width: 20px;
+  height: 20px;
+  border: 2px solid white;
+  border-radius: 50%;
+  position: absolute;
+  transition-duration: 50ms;
+  transition-timing-function: ease-out;
+  animation: cursorAnim .3s infinite alternate;
 
+  pointer-events: none;
+  z-index: 999;
+}
+.expand{
+  animation: cursorAnim3 .3s backwards;
+  border: 4px solid $jaune-pale;
+}
+
+*,*:hover{
+  cursor: none;
 }
 
 button{
@@ -20,17 +40,20 @@ button{
   border-radius: 3px;
   border: none;
   color: $mauve-main;
+  cursor: none;
 
   &:hover{
     background-color: $mauve-main;
     color: $jaune-main;
     border: 1px solid $jaune-main;
+    cursor: none;
   }
 
   &:active{
     background-color: $mauve-pale;
     color: $jaune-main;
     border: 1px solid $jaune-main;
+    cursor: none;
   }
 
 }
