--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -61,6 +61,9 @@ button{
 .texte-alt-color{
   color: $jaune-main;
 }
+.texte-alt2-color{
+  color: $mauve-pale;
+}
 
 @media screen and (max-width: $vw-tablette){
   body {
