--- a/src/scss/components/_section-interets.scss
+++ b/src/scss/components/_section-interets.scss
@@ -1,9 +1,10 @@
 /* ------------ intérêts ------------ */
 .interets{
-  height: 75vh;
+  height: 100vh;
   padding: 10px 0 0 10px;
   background: $jaune-main;
   color: #000;
+  font-size: $fz-normal3;
   h1{
     color: $mauve-main;
   }
@@ -23,7 +24,7 @@
   p{
     height: 125px;
     width: 825px;
-    margin: 10% 0 0 0;
+    margin: 165px 0 0 0;
   }
 }
 
