navbar fix the fixed + suite a propos

--- a/src/scss/components/_footer-page.scss
+++ b/src/scss/components/_footer-page.scss
@@ -2,8 +2,14 @@
 footer{
   display: flex;
   justify-content: center;
-  position: absolute;
-  bottom: 1%;
-  left: 45%;
   font-size: $fz-footer;
+  background: none;
+
+  position: absolute;
+  bottom: 5px;
+  left: 45%;
+}
+
+.footer-apropos{
+  color: #000;
 }
