--- a/src/scss/components/_section-interets.scss
+++ b/src/scss/components/_section-interets.scss
@@ -28,8 +28,20 @@
   }
 }
 
-.img-interets{
+.imgs-interets{
   grid-column-start: 4;
   grid-column-end: 5;
   grid-row-start: 1;
+}
+.img-interets-1{
+
+}
+.img-interets-2{
+
+}
+.img-interets-3{
+
+}
+.img-interets-4{
+
 }
