--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -7,7 +7,13 @@ body{
   line-height: $lh-normal;
   background-color: $mauve-main;
 
+  width: 100%;
+
   cursor: none;
+
+  padding-top: 75px;
+
+  position: relative;
 }
 
 .cursor{
