--- a/src/scss/components/_section-competences.scss
+++ b/src/scss/components/_section-competences.scss
@@ -15,16 +15,12 @@
   grid-template-columns: 100px 1fr 50px 1fr 100px;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   gap: 0 0;
-  grid-template-areas:
-    ". . ."
-    ". . ."
-    ". . ."
-    ". . .";
 }
 .comp-1{
   grid-column-start: 2;
   grid-column-end: 3;
-  grid-row-end: 1;
+  grid-row-start: 1;
+  grid-row-end: 2;
 
   display: flex;
   justify-content: space-between;
@@ -35,6 +31,7 @@
   p{
     height: 93px;
     width: 514px;
+    text-align: left;
   }
 }
 .img-comp-1{
@@ -46,10 +43,12 @@
   grid-column-start: 4;
   grid-column-end: 5;
   grid-row-start: 2;
+  grid-row-end: 3;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
+  align-self: center;
 
   height: 200px;
   width: 800px;
@@ -58,6 +57,7 @@
   p{
     height: 93px;
     width: 514px;
+    text-align: right;
   }
 }
 .img-comp-2{
@@ -69,6 +69,7 @@
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 3;
+  grid-row-end: 4;
 
   display: flex;
   justify-content: space-between;
@@ -79,6 +80,7 @@
   p{
     height: 93px;
     width: 514px;
+    text-align: left;
   }
 }
 .img-comp-3{
@@ -90,6 +92,7 @@
   grid-column-start: 4;
   grid-column-end: 5;
   grid-row-start: 4;
+  grid-row-end: 5;
 
   display: flex;
   justify-content: space-between;
@@ -99,7 +102,8 @@
   width: 800px;
   p{
     height: 93px;
-    width: 495px;
+    width: 514px;
+    text-align: right;
   }
 }
 .img-comp-4{
