--- a/src/scss/components/_section-hero.scss
+++ b/src/scss/components/_section-hero.scss
@@ -5,8 +5,8 @@
 }
 
 video source{
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vw;
   margin: 0;
   padding: 0;
 }
@@ -16,7 +16,7 @@ video source{
 .banderolle{
   position: absolute;
   width: 100vw;
-  height: 280px;
+  height: 28%;
   left: 0;
   top: 437px;
 
