--- a/src/scss/components/_section-singles.scss
+++ b/src/scss/components/_section-singles.scss
@@ -1,5 +1,5 @@
 
-.bulle{
+.bulle {
   height: 450px;
   width: 450px;
   border-radius: 255px;
@@ -8,22 +8,122 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-.projets{
-  display: grid;
-  grid-auto-columns: auto;
-  align-items: center;
-}
-.bulle button{
-  background: $mauve-main;
-  color: $jaune-main;
+  color: #000;
+
+  h2 {
+    margin: 0;
+  }
+
+  p {
+    font-weight: $fw-bold;
+    margin: 10px 0;
+  }
 }
 
-.projets img{
-  width: 1350px;
-  height: 900px;
+.projets {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.projet-1{
+
+.bulle button {
+  width: 200px;
+  height: 54px;
+
+  background-color: $mauve-main;
+  border-radius: 3px;
+  border: none;
+  color: $jaune-main;
+  cursor: none;
+
+  &:hover {
+    background-color: $jaune-main;
+    color: $mauve-main;
+    border: 1px solid $mauve-main;
+    cursor: none;
+  }
+
+  &:active {
+    background-color: $mauve-pale;
+    color: $jaune-main;
+    border: 1px solid $jaune-main;
+    cursor: none;
+  }
+
+}
+
+.projets {
+  display: grid;
+  grid-template-columns: 100px 1fr 100px;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  gap: 0 0;
+}
+
+.projets a img {
+  width: 75%;
+  height: auto;
+  margin: 20px;
+  transition: all .2s ease-in-out;
+}
+
+.projets a img:hover {
+  transform: scale(1.01);
+}
+.projet-a a,.projet-c a,.projet-e a{
   display: flex;
   justify-content: right;
+}
+.projet-a, .projet-b, .projet-c, .projet-d, .projet-e {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.projet-a {
+  margin: 0;
+}
+
+.projet-b, .projet-c, .projet-d, .projet-e {
+  margin: 5% 0 0 0;
+}
+
+.projet-a {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+
+  display: flex;
+  justify-content: right;
+}
+
+.projet-b {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 3;
+
+  display: flex;
+  justify-content: left;
+}
+
+.projet-c {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+.projet-d {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 5;
+}
+
+.projet-e {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 6;
 }
