--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -19,7 +19,8 @@ body{
 .cursor{
   width: 20px;
   height: 20px;
-  border: 2px solid white;
+  background: $jaune-main;
+  border: 2px solid $mauve-main;
   border-radius: 50%;
   position: absolute;
   transition-duration: 50ms;
@@ -31,7 +32,7 @@ body{
 }
 .expand{
   animation: cursorAnim3 .3s backwards;
-  border: 4px solid $jaune-pale;
+  border: 4px solid $mauve-main;
 }
 
 *,*:hover{
