page course-lumiere et ajouts des images single

--- a/src/scss/components/_section-competences.scss
+++ b/src/scss/components/_section-competences.scss
@@ -1,6 +1,7 @@
 /* ------------ compétences ------------ */
 .competences{
   width: 100vw;
+  height: 115vh;
   padding: 10px 0 0 10px;
   background: $jaune-main;
   color: #000;
