--- a/src/scss/components/_section-singles.scss
+++ b/src/scss/components/_section-singles.scss
@@ -1,4 +1,4 @@
-
+// page liste de projets //
 .bulle {
   height: 450px;
   width: 450px;
@@ -26,8 +26,10 @@
   flex-direction: column;
   justify-content: center;
 }
-
-.bulle button {
+.bulle a{
+  margin: 0;
+}
+.bulle a button {
   width: 200px;
   height: 54px;
 
