debut refonte site et fix du curseur menu et fix du load

--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -74,10 +74,10 @@
 .course-demo h1{
   justify-content: center;
 }
-.course-demo video{
+.course-demo iframe{
   justify-content: center;
   width: 70%;
-  height: auto;
+  height: 70%;
 
   margin: 0;
   padding: 0;
