--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -51,14 +51,14 @@ a{
   cursor: none;
 }
 .loader{
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 1/2;
   z-index: 200;
 
   background: $jaune-main;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   overflow: hidden;
 
@@ -97,6 +97,7 @@ button{
     color: $jaune-main;
     border: 1px solid $jaune-main;
     cursor: none;
+    text-underline: none;
   }
 
   &:active{
