--- a/src/scss/components/_section-competences.scss
+++ b/src/scss/components/_section-competences.scss
@@ -1,7 +1,7 @@
 /* ------------ compétences ------------ */
 .competences{
   width: 100vw;
-  height: 115vh;
+  height: 120vh;
   padding: 10px 0 0 10px;
   background: $jaune-main;
   color: #000;
@@ -111,4 +111,42 @@
   height: 193px;
   width: 193px;
   background: url("../../images/unity.png") no-repeat;
+}
+
+@media screen and (max-width: $vw-tablette){
+
+}
+
+@media screen and (max-width: $vw-mobile) {
+  .comp-grid{
+    grid-template-columns: 20px 1fr 20px;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+  }
+  .comp-1{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    height: 130px;
+    width: 400px;
+    margin: 20px 0;
+    p{
+      font-size: 12px;
+      height: 50px;
+      width: 200px;
+      text-align: left;
+    }
+  }
+  .img-comp-1{
+    background: url("../../images/html.png") no-repeat;
+    img{
+      width: 127px;
+      height: 127px;
+    }
+  }
 }
