--- a/src/scss/components/_section-hero.scss
+++ b/src/scss/components/_section-hero.scss
@@ -46,3 +46,18 @@
 .hero a{
   margin: 0;
 }
+
+@media screen and (max-width: $vw-tablette){
+
+}
+
+@media screen and (max-width: $vw-mobile) {
+
+  .video-demo-bg video source{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-position: center;
+  }
+}
