--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -89,11 +89,25 @@
   margin: 0;
   padding: 0;
 }
+.citrouille-demo-video{
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+  margin: 0 0 5% 0;
+}
+.citrouille-demo-video video{
+  justify-content: center;
+  height: 50%;
+  width: 50%;
+}
+
 
 // section figma //
 .figma-verum{
   display: flex;
   justify-content: center;
+  height: 100vh;
 }
 .figma-verum iframe {
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -111,8 +125,8 @@
   height: 100vh;
 }
 .projet-slider{
-  width: 70%;
-  height: 70%;
+  width: 80%;
+  height: 100%;
   display: flex;
 
   overflow-scrolling: touch;
@@ -123,9 +137,84 @@
 .slide-projet{
   width: 100%;
   flex-shrink: 0;
-  height: 70%;
+  height: 100%;
 
 }
 .projet-slider > div{
   scroll-snap-align: start;
 }
+
+
+@media screen and (max-width: $vw-tablette){
+
+}
+
+@media screen and (max-width: $vw-mobile){
+  .intro-projet{
+    display: grid;
+    grid-template-columns: 20px 1fr 20px;
+    height: 100vh;
+
+
+    .image-projet{
+      width: 70%;
+      justify-self: center;
+
+      grid-column-start: 2;
+      grid-column-end: 3;
+    }
+    .texte-projet{
+      grid-column-start: 2;
+      grid-column-end: 3;
+      width: 100vw;
+      justify-self: center;
+    }
+    .logiciels-competences-projet{
+      display: grid;
+      grid-template-columns: 1fr 50px 1fr;
+
+    }
+    .logiciels-competences-projet img{
+      width: 75px;
+      height: auto;
+      margin: 0 10px 0 0;
+    }
+    .un-logiciel{
+      grid-column-start: 1;
+      grid-column-end: 2;
+    }
+    .flex-logiciels{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+    }
+    .une-competence{
+      grid-column-start: 4;
+      grid-column-end: 5;
+    }
+    .flex-competences{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+    }
+    .titre-logo-projet{
+      text-align: center;
+    }
+  }
+
+  .projet-section{
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-self: center;
+    img{
+      width: 80%;
+    }
+  }
+}
+
+
+
