--- a/src/scss/components/_section-singles.scss
+++ b/src/scss/components/_section-singles.scss
@@ -160,3 +160,34 @@
   display: flex;
   justify-content: right;
 }
+
+
+@media screen and (max-width: $vw-tablette){
+
+
+}
+
+@media screen and (max-width: $vw-mobile){
+  .projets {
+    display: grid;
+    grid-template-columns: 20px 1fr 20px;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    gap: 0 0;
+
+  }
+  .bulle {
+    height: 200px;
+    width: 200px;
+    margin: 30px;
+    border-radius: 255px;
+    p{
+      font-size: 12px;
+    }
+  }
+  .bulle a button{
+    margin: 0 100px;
+    width: 100px;
+    height: 27px;
+    font-size: 13px;
+  }
+}
