--- a/src/scss/elements/_body.scss
+++ b/src/scss/elements/_body.scss
@@ -140,20 +140,17 @@ button{
 
 @media screen and (max-width: $vw-tablette){
   body {
-    width: 100%;
+      width: 100%;
+      height: 100%;
   }
-
-
-
-
+  .cursor{
+    display: none;
+  }
 }
 
-@media screen and (max-width: $vw-mobile){
+@media screen and (max-width: $vw-mobile) {
   body {
     width: 100%;
+    height: 100%;
   }
-
-
-
-
 }
