--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -14,6 +14,9 @@
 .info-contact > *{
   margin: 80px 0 0 0;
 }
+.cv-btn{
+margin: 15% 0 0 0;
+}
 
 /* Icon-Contact */
 .sociaux{
@@ -62,3 +65,38 @@
   border-radius: 0;
 }
 
+
+@media screen and (max-width: $vw-tablette){
+
+}
+
+@media screen and (max-width: $vw-mobile) {
+  .contact{
+    height: 100%;
+  }
+  .grid-contact{
+    display: grid;
+    grid-template-columns: 20px 1fr 20px;
+    grid-template-rows: 1fr 1fr;
+  }
+  .info-contact{
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+  .formulaire-contact{
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    grid-row-start: 2;
+    grid-row-end: 3;
+  }
+  .info-contact > *{
+    justify-self: center;
+  }
+  .info-contact h2{
+    font-size: $fz-h2;
+  }
+}
