--- a/src/scss/components/_section-singles.scss
+++ b/src/scss/components/_section-singles.scss
@@ -11,6 +11,8 @@
   justify-content: center;
   color: #000;
 
+  text-decoration: none;
+
   h2 {
     margin: 0;
   }
@@ -28,6 +30,7 @@
 }
 .bulle a{
   margin: 0;
+  text-decoration: none;
 }
 .bulle a button {
   width: 200px;
