--- a/src/scss/components/_section-a-propos.scss
+++ b/src/scss/components/_section-a-propos.scss
@@ -167,6 +167,104 @@
 }
 
 @media screen and (max-width: $vw-tablette){
+  .a-propos{
+    grid-template-columns: 20px 1fr 20px;
+    grid-template-rows: 1fr 1fr;
+    height: 100vh;
+  }
+  .a-propos-sideA{
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    grid-row-start: 2;
+    grid-row-end: 3;
+    justify-self: center;
+  }
+  .a-propos-sideB{
+    grid-column-start: 2;
+    grid-column-end: 3;
+
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+    justify-self: center;
+
+  }
+  .texte-propos{
+    width: 90vw;
+    height: 400px;
+    font-size: $fz-normal2;
+
+    ul {
+      line-height: $lh-medium;
+    }
+  }
+  .photo-cercle{
+    background-color: $jaune-main;
+    height: 300px;
+    width: 300px;
+    border-radius: 255px;
+  }
+  .photo-cercle img{
+    width: 215px;
+    height: auto;
+  }
+  #bulle-qualite{
+    height: 0;
+    opacity: 1;
+  }
+
+  .qualite-1{
+    background: $jaune-main;
+    height: 125px;
+    width: 125px;
+    border-radius: 255px;
+    bottom: 195px;
+    right: 95px;
+    position: relative;
+    p{
+      color: $mauve-main;
+      font-size: $fz-normal;
+      position: absolute;
+      top: 30%;
+      left: 18%;
+    }
+  }
+  .qualite-2{
+    background: $jaune-main;
+    height: 125px;
+    width: 125px;
+    border-radius: 255px;
+    bottom: 195px;
+    right: 60px;
+    position: relative;
+    p{
+      color: $mauve-main;
+      font-size: $fz-normal;
+      position: absolute;
+      top: 30%;
+      left: 10%;
+    }
+  }
+  .qualite-3{
+    background: $jaune-main;
+    height: 125px;
+    width: 125px;
+    border-radius: 255px;
+    bottom: 270px;
+    left: 60px;
+    position: relative;
+    p{
+      color: $mauve-main;
+      font-size: $fz-normal;
+      position: absolute;
+      top: 30%;
+      left: 18%;
+    }
+  }
+  .a-propos-footer{
+    margin: 0;
+  }
 
 }
 
