--- a/src/scss/components/_section-competences.scss
+++ b/src/scss/components/_section-competences.scss
@@ -1,7 +1,7 @@
 /* ------------ compétences ------------ */
 .competences{
   width: 100vw;
-  height: 100%;
+  height: 125vh;
   padding: 10px 0 0 10px;
   background: $jaune-main;
   color: #000;
@@ -35,10 +35,17 @@
     text-align: left;
   }
 }
+
 .img-comp-1{
   height: 193px;
   width: 193px;
   background: url("../../images/html.png") no-repeat;
+}
+.comp-1:hover{
+
+  .img-comp-1{
+    background-image: url("../../images/css.png");
+  }
 }
 .comp-2{
   grid-column-start: 4;
@@ -66,6 +73,12 @@
   width: 200px;
   background: url("../../images/Figma.png") no-repeat;
 }
+.comp-2:hover{
+
+  .img-comp-2{
+    background-image: url("../../images/photoshop.png");
+  }
+}
 .comp-3{
   grid-column-start: 2;
   grid-column-end: 3;
@@ -88,6 +101,12 @@
   height: 193px;
   width: 193px;
   background: url("../../images/wordpress.png") no-repeat;
+}
+.comp-3:hover{
+
+  .img-comp-3{
+    background-image: url("../../images/php.png");
+  }
 }
 .comp-4{
   grid-column-start: 4;
@@ -112,12 +131,21 @@
   width: 193px;
   background: url("../../images/unity.png") no-repeat;
 }
+.comp-4:hover{
+  .img-comp-4{
+    background-image: url("../../images/touchdesigner.png");
+  }
+}
 
 @media screen and (max-width: $vw-tablette){
 
 }
 
 @media screen and (max-width: $vw-mobile) {
+  .competences{
+    width: 100vw;
+    height: 100%;
+  }
   .competences h1{
     margin: 20px 0;
     font-size: $fz-h2;
@@ -146,6 +174,17 @@
       text-align: left;
     }
   }
+  .img-comp-1{
+    height: 127px;
+    width: 127px;
+    background: url("../../images/html-5-mobile.png") no-repeat;
+  }
+  .comp-1:hover{
+
+    .img-comp-1{
+      background-image: url("../../images/css-mobile.png");
+    }
+  }
   .comp-2{
     grid-column-start: 2;
     grid-column-end: 3;
@@ -166,6 +205,18 @@
       text-align: right;
     }
   }
+  .img-comp-2{
+    height: 127px;
+    width: 127px;
+    background: url("../../images/figma-mobile.png") no-repeat;
+  }
+  .comp-2:hover{
+
+    .img-comp-2{
+      background-image: url("../../images/photoshop-mobile.png");
+    }
+  }
+
   .comp-3{
     grid-column-start: 2;
     grid-column-end: 3;
@@ -186,6 +237,17 @@
       text-align: left;
     }
   }
+  .img-comp-3{
+    height: 127px;
+    width: 127px;
+    background: url("../../images/wordpress-mobile.png") no-repeat;
+  }
+  .comp-3:hover{
+
+    .img-comp-3{
+      background-image: url("../../images/php-mobile.png");
+    }
+  }
   .comp-4{
     grid-column-start: 2;
     grid-column-end: 3;
@@ -204,6 +266,17 @@
       height: 50px;
       width: 200px;
       text-align: right;
+    }
+  }
+  .img-comp-4{
+    height: 127px;
+    width: 127px;
+    background: url("../../images/unity-mobile.png") no-repeat;
+  }
+  .comp-4:hover{
+
+    .img-comp-4{
+      background-image: url("../../images/touch-designer-mobile.png");
     }
   }
 }
