--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -24,6 +24,7 @@
   .logiciels-competences-projet{
     display: grid;
     grid-template-columns: 1fr 240px 1fr;
+    align-self: center;
     h2{
       color: $jaune-main;
     }
@@ -103,6 +104,11 @@
   height: 50%;
   width: 50%;
 }
+.single-voir-site{
+  justify-content: center;
+  height: 75%;
+  width: 75%;
+}
 
 
 // section figma //
@@ -119,33 +125,62 @@
 
 
 //  section projet-section-slider //
-.projet-section-slider{
+.projet-section-slider h1{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-self: center;
-  height: 100vh;
+  justify-content: center;
 }
-.projet-slider{
-  width: 80%;
-  height: 100%;
+.flex-slider{
   display: flex;
-
-  overflow-scrolling: touch;
-  overflow-x: auto;
-  overflow-y: hidden;
-  scroll-snap-type: x mandatory;
-}
-.slide-projet{
-  width: 100%;
-  flex-shrink: 0;
-  height: 100%;
-
-}
-.projet-slider > div{
-  scroll-snap-align: start;
+  justify-content: center;
 }
 
+#slider{
+  overflow: hidden;
+  width: 70%;
+}
+#slider figure{
+  position: relative;
+  width: 500%;
+  margin: 0;
+  left: 0;
+
+  animation: 20s slider infinite;
+}
+#slider figure img{
+  width: 20%;
+  float: left;
+}
+@keyframes slider {
+  0% {
+    left: 0;
+  }
+  20% {
+    left: 0;
+  }
+  25% {
+    left: -100%;
+  }
+  45%{
+    left: -100%;
+  }
+  50%{
+    left: -200%;
+  }
+  70%{
+    left: -200%;
+  }
+  75%{
+    left: -300%;
+  }
+  95%{
+    left: -300%;
+  }
+  100%{
+    left: -400%;
+  }
+
+
+}
 
 @media screen and (max-width: $vw-tablette){
 
@@ -207,13 +242,13 @@
   }
 
   .projet-section{
-    height: 50vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-self: center;
     img{
-      width: 80%;
+      width: 75%;
     }
   }
 }
