--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -5,9 +5,10 @@
 .grid-contact{
   display: grid;
   grid-template-columns: 15% 35% 35% 15%;
+  width: 100vw;
 }
 .info-contact{
-  width: 450px;
+  width: 100vw;
   grid-column-start: 2;
   grid-column-end: 3;
 }
@@ -85,6 +86,7 @@ margin: 15% 0 0 0;
 
     grid-row-start: 1;
     grid-row-end: 2;
+    width: 100vw;
   }
   .formulaire-contact{
     grid-column-start: 2;
@@ -92,11 +94,24 @@ margin: 15% 0 0 0;
 
     grid-row-start: 2;
     grid-row-end: 3;
+    justify-self: center;
   }
   .info-contact > *{
     justify-self: center;
   }
   .info-contact h2{
-    font-size: $fz-h2;
+    font-size: $fz-normal3;
+  }
+  .sociaux{
+    width: 300px;
+    display: flex;
+    justify-content: flex-start;
+  }
+  .sociaux a {
+    margin: 0 10px;
+  }
+  .formulaire-contact img{
+    display: flex;
+    justify-content: center;
   }
 }
