--- a/src/scss/components/_section-single.scss
+++ b/src/scss/components/_section-single.scss
@@ -190,12 +190,13 @@
   .intro-projet{
     display: grid;
     grid-template-columns: 20px 1fr 20px;
-    height: 100vh;
-
+    height: 100%;
 
     .image-projet{
       width: 70%;
       justify-self: center;
+
+      margin: 20px 0;
 
       grid-column-start: 2;
       grid-column-end: 3;
@@ -203,13 +204,14 @@
     .texte-projet{
       grid-column-start: 2;
       grid-column-end: 3;
-      width: 100vw;
+      width: 90vw;
+      height: 100%;
       justify-self: center;
     }
     .logiciels-competences-projet{
       display: grid;
       grid-template-columns: 1fr 50px 1fr;
-
+      grid-template-rows: 1fr 10px 1fr;
     }
     .logiciels-competences-projet img{
       width: 75px;
@@ -219,6 +221,9 @@
     .un-logiciel{
       grid-column-start: 1;
       grid-column-end: 2;
+
+      grid-row-start: 1;
+      grid-row-end: 2;
     }
     .flex-logiciels{
       display: flex;
@@ -227,8 +232,11 @@
 
     }
     .une-competence{
-      grid-column-start: 4;
-      grid-column-end: 5;
+      grid-column-start: 1;
+      grid-column-end: 2;
+
+      grid-row-start: 3;
+      grid-row-end: 4;
     }
     .flex-competences{
       display: flex;
@@ -240,7 +248,23 @@
       text-align: center;
     }
   }
-
+  .single-demo-video{
+    margin: 50px 0 0 0;
+    width: 100vw;
+    height: auto;
+    h1{
+      font-size: $fz-normal3;
+    }
+  }
+  .projet-section-slider{
+    h1{
+      font-size: $fz-normal3;
+    }
+  }
+  .figma-verum{
+    width: 100vw;
+    height: auto;
+  }
   .projet-section{
     height: 100%;
     display: flex;
@@ -250,7 +274,11 @@
     img{
       width: 75%;
     }
+    h1{
+      font-size: $fz-normal3;
+    }
   }
+
 }
 
 
